# flockroom

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
hooks/: flock_check.sh  hive_check.sh
scripts/: demo-swarm.sh
src/flockroom/: __init__.py  api.py  bridge.py  main.py  mcp_server.py  rooms.py
src/flockroom/swarm/: state.py
src/hivechat/: __init__.py  api.py  bridge.py  main.py  mcp_server.py  rooms.py
src/hivechat/swarm/: protocol.py  state.py
tests/: conftest.py  test_api.py  test_rooms.py  test_swarm_protocol.py  test_swarm_state.py
web/: viewer.html
