[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hivechat"
version = "0.1.0"
description = "Tiny MCP server giving multiple AI agents a shared chat room"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
hivechat = "hivechat.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hivechat"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v"

[tool.hatch.envs.lint]
dependencies = ["ruff>=0.8"]

[tool.hatch.envs.lint.scripts]
check = ["ruff check src/ tests/", "ruff format --check src/ tests/"]
fix   = ["ruff check --fix src/ tests/", "ruff format src/ tests/"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
